# kafkacat2

./: CMakeLists.txt_bk  Makefile.config  config.cache  config.h  kafkacat  kafkacat.c  tools.d
stable1/: config.log.old  format.d  kafkacat.d  run_command.txt
stable1/stable1/: CMakeLists.txt  kafkacat  kafkacat.c
